# libcs50

./: .docker-compose.yml.swp  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.macos  README.md  codeship-services.yml  codeship-steps.yml  cs50.c  default.nix  docker-compose.yml  hello.c  post  postinst  postrm  postun  read_file.c  read_file.txt  run_tests.sh  void
.github/workflows/: main.yml
.rpmdb/: Basenames  Conflictname  Dirnames  Group  Installtid  Name  Obsoletename  Packages  Providename  Requirename  Sha1header  Sigmd5  Triggername  __db.001  __db.002  __db.003
SOURCES/: cs50.c  cs50.h
SOURCES/library50-c/: cs50.c  cs50.h
SPECS/: .library50-c.spec.swp  library50-c.spec
deb/: .gitignore  Makefile  changelog  postinst
deb/library50-c-6/: .gitignore  Makefile  cs50.c  cs50.h
deb/library50-c-6/debian/: .gitignore  changelog  control  files  library50-c.dirs  rules
debian/: changelog  control  copyright  libcs50.install  libcs50.manpages  libcs50.substvars  postinst  postrm  source.lintian-overrides
debian/docs/: eprintf.3  get_char.3  get_double.3  get_float.3  get_int.3  get_long_long.3  get_string.3
docs/: eprintf.3  eprintf.adoc  generate_man.sh  get_char.3  get_char.adoc  get_double.3  get_double.adoc  get_float.3  get_float.adoc  get_int.3  get_int.adoc  get_long.3  get_long.adoc  get_long_long.3  get_long_long.adoc  get_string.3  get_string.adoc
docs/man/: eprintf.3  get_char.3  get_double.3  get_float.3  get_int.3  get_long_long.3  get_string.3
etc/nginx/: nginx.conf
etc/php5/fpm/conf.d/: php.ini
etc/profile.d/: cs50.sh
etc/supervisor/conf.d/: supervisord.conf
pacman/: PKGBUILD
rpm/: .gitignore
rpm/SOURCES/: cs50.c  cs50.h
rpm/SPECS/: library50-c.spec
src/: Makefile  OUT  cash.c  cs50.c  cs50.h  test  test.c
src/test.dSYM/Contents/Resources/DWARF/: test
tests/: 1.desc  1.out  1.run  2.desc  2.in  2.out  2.run  3.desc  3.out  3.run  4.desc  4.out  4.run  5.desc  5.out  5.run  6.desc  6.out  6.run  7.desc  7.in  7.out  7.run  Makefile  README.md  eprintf.c  gc.c  get_char.c  get_int.c  get_int_formatted_prompt.c  get_int_test.c  get_string.c  get_string_formatted_prompt.c  get_string_test.c  hackerrank.c  run_tests.sh  setio.py  test.c  test_driver.c  test_driver.h  (+1 more)
tests/get_char/: get_char.c  input.txt  output.txt  test
tests/get_double/: input.txt  test.c
tests/get_float/: input.txt  output.txt  test.c
tests/get_int/: input.txt  test.c
tests/get_long_long/: input.txt  output.txt  test.c
tests/get_string/: input.txt  test.c
valgrind/: libgc.supp  valgrind.out
